<resources>
    <string name="app_name">TD2_JIN</string>
    <string name="choose_picture">Choisir une Image</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="email">example@example.fr</string>
    <string name="password">Mot de passe</string>
    <string name="confirm_password">Confirmer mot de passe</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="login">Se connecter</string>
    <string name="disconnect">Déconnexion</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
</resources>