<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userInfo"
            type="com.example.td2_jin.network.UserInfo" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".task.TaskActivity">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/upload_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_picture" />

        <Button
            android:id="@+id/take_picture_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_picture" />

        <EditText
            android:id="@+id/Prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:text="@={userInfo.firstName}" />

        <EditText
            android:id="@+id/Nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:text="@={userInfo.lastName}" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:text="@={userInfo.email}" />

        <ImageButton
            android:id="@+id/imageButtonValidate"
            android:layout_width="68dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="#03FA03"
            android:tint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="?android:attr/textCheckMark" />

    </LinearLayout>
</layout>